--- a/Lab01/Lab01_Forward_Elimination/ForwardThreeLoops/ForwardThreeLoops.vcxproj
+++ b/Lab01/Lab01_Forward_Elimination/ForwardThreeLoops/ForwardThreeLoops.vcxproj
@@ -99,7 +99,7 @@
     <Link>
       <SubSystem>Console</SubSystem>
       <GenerateDebugInformation>true</GenerateDebugInformation>
-      <AdditionalLibraryDirectories>&amp;(SolutionDir)\SDL\lib\x86;A:\DyDVideojuegos\2nd Year\Maths 2\Lab01\Lab01_Forward_Elimination\SDL\lib\x86;%(AdditionalLibraryDirectories)</AdditionalLibraryDirectories>
+      <AdditionalLibraryDirectories>&amp;(SolutionDir)\SDL\lib\x86;A:\GitHub\Maths_2\Lab01\Lab01_Forward_Elimination\ForwardThreeLoops\SDL\lib\x86;%(AdditionalLibraryDirectories)</AdditionalLibraryDirectories>
       <AdditionalDependencies>SDL2.lib;SDL2main.lib;%(AdditionalDependencies)</AdditionalDependencies>
     </Link>
   </ItemDefinitionGroup>
