--- a/Lab01/Lab01_Forward_Elimination/ForwardTwoLoops/ForwardTwoLoops.vcxproj
+++ b/Lab01/Lab01_Forward_Elimination/ForwardTwoLoops/ForwardTwoLoops.vcxproj
@@ -92,6 +92,8 @@
     <Link>
       <SubSystem>Console</SubSystem>
       <GenerateDebugInformation>true</GenerateDebugInformation>
+      <AdditionalDependencies>SDL2.lib;SDL2main.lib;%(AdditionalDependencies)</AdditionalDependencies>
+      <AdditionalLibraryDirectories>$(ProjectDir);A:\GitHub\Maths_2\Lab01\Lab01_Forward_Elimination\ForwardTwoLoops\SDL\lib\x86;%(AdditionalLibraryDirectories)</AdditionalLibraryDirectories>
     </Link>
   </ItemDefinitionGroup>
   <ItemDefinitionGroup Condition="'$(Configuration)|$(Platform)'=='Release|Win32'">
