--- a/Lab01/Lab01_Forward_Elimination/ForwardTwoLoops/ForwardTwoLoops.vcxproj.filters
+++ b/Lab01/Lab01_Forward_Elimination/ForwardTwoLoops/ForwardTwoLoops.vcxproj.filters
@@ -15,10 +15,7 @@
     </Filter>
   </ItemGroup>
   <ItemGroup>
-    <ClInclude Include="BigGlobals.h">
-      <Filter>Header Files</Filter>
-    </ClInclude>
-    <ClInclude Include="SmallGlobals.h">
+    <ClInclude Include="Globals.h">
       <Filter>Header Files</Filter>
     </ClInclude>
   </ItemGroup>
